--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -4,3 +4,52 @@ html {
 *, *:before, *:after {
     box-sizing: inherit;
 }
+
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    background: linear-gradient(rgb(41, 41, 41), rgb(130, 130, 130));
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.building-zone {
+    height: 820px;
+    width: 600px;
+}
+
+.roof {
+    height: 20px;
+    width: 600px;
+    background-color: rgb(62, 47, 47);
+    border-radius: 3px;
+}
+
+.facade {
+    height: 800px;
+    width: 580px;
+    background-color: rgb(74, 68, 58);
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+}
+
+.elevator {
+    height: 200px;
+    width: 150px;
+    background-color: black;
+    border-radius: 2px;
+}
+
+.left {
+    margin-left: 40px;
+}
+
+.right {
+    margin-right: 40px;
+}
