--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13,8 +13,9 @@ html, body {
 body {
     background: linear-gradient(rgb(41, 41, 41), rgb(130, 130, 130));
     display: flex;
-    justify-content: center;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .building-zone {
@@ -63,7 +64,7 @@ body {
 
 .right {
     margin-right: 100px;
-    animation-delay: 5s;
+    animation-delay: 7s;
 }
 
 /* .translate {
@@ -88,4 +89,11 @@ body {
     100% {
         transform: translate(0, 0);
     }
+}
+
+.ground {
+    width: 100%;
+    height: 30px;
+    background: linear-gradient(rgb(49, 53, 49), rgb(39, 39, 39));
+    z-index: 1;
 }
